k8s/notif-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notif-deployment
  labels:
    app: notif-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notif-service
  template:
    metadata:
      labels:
        app: notif-service
    spec:
      containers:
        - name: notif-service
          image: your-dockerhub-username/notif-service:latest
          ports:
            - containerPort: 8002
apiVersion: v1
kind: Service
metadata:
  name: notif-service
spec:
  selector:
    app: notif-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
